# AVITO_Mayak

./: .gitattributes  AGENTS.md  README.md  pyproject.toml
apps/: README.md
contracts/: README.md
docs/: MANIFEST.md
docs/00-governance/: AGENT_EXECUTION_PROTOCOL.md  CHATGPT_PROJECT_LEADERSHIP_RULES_v1.1.md  CURRENT_STATE.md  DECISION_LOG_APPEND_ONLY.md  DOCUMENTATION_BACKLOG.md  DOCUMENTATION_GOVERNANCE.md  GLOSSARY.md  OPEN_DECISIONS.md  PROJECT_ENTRYPOINT.md  REMOTE_REPOSITORY_SUPERVISION_PROTOCOL_v1.0.md  ROADMAP.md  SOURCE_OF_TRUTH_POLICY.md  WORKLOG_APPEND_ONLY.md
docs/01-product/: MAYAK_AVITO_TARGET_MODEL_v0.1.md  README.md
docs/02-architecture/: ARCHITECTURE_BASELINE_v1.0.md  ARCHITECTURE_BASELINE_v1.1.md  DATA_MODEL_v1.0.md  MAYAK_AVITO_ARCHITECTURE_MODULE_MAP_v0.1.md  MIGRATION_AND_COMPATIBILITY_POLICY_v1.0.md  MODULE_REGISTRY.md  README.md  SECURITY_AND_PRIVACY_MODEL_v1.0.md  TECHNICAL_BASELINE_EVIDENCE_v1.0.md  TECHNICAL_BASELINE_v1.0.md  TECHNOLOGY_SELECTION_METHOD_v1.0.md
docs/03-contracts/: CONTRACT_CHANGE_POLICY_v1.0.md  CONTRACT_PACKAGE_v1.0.md  ERROR_AND_IDEMPOTENCY_POLICY_v1.0.md  README.md
docs/04-modules/: README.md
docs/05-tasks/: README.md  TASK-001-TECHNICAL-ENVIRONMENT-PROOF-ERRATA.md  TASK_TEMPLATE.md
docs/06-reports/: README.md  REPORT_TEMPLATE.md
docs/07-quality/: ACCEPTANCE_MATRIX_v1.0.md  ACCEPTANCE_MATRIX_v1.1.md  FIXTURE_REGISTRY_v1.0.md  README.md  REFERENCE_REGRESSION_POLICY_v1.0.md  TEST_STRATEGY_v1.0.md
docs/08-operations/: BACKUP_AND_RECOVERY_v1.0.md  DEPLOYMENT_AND_RELEASE_RUNBOOK_v1.0.md  ENVIRONMENT_ISOLATION_POLICY_v1.0.md  ENVIRONMENT_MATRIX_v1.0.md  ENVIRONMENT_MATRIX_v1.1.md  OBSERVABILITY_AND_ALERTING_v1.0.md  README.md  WINDOWS_EGRESS_AGENT_RUNBOOK_v1.0.md
docs/09-references/: AVITO_REFERENCE_EVIDENCE_v1.0.md  AVITO_REFERENCE_POLICY_v1.0.md  MAX_REFERENCE_POLICY_v1.0.md  README.md  REFERENCE_REGISTRY_v1.0.md  REFERENCE_REGISTRY_v1.1.md  TELEGRAM_REFERENCE_POLICY_v1.0.md
infra/: README.md
modules/: README.md
src/mayak/: __init__.py
tests/: README.md
tests/architecture/: test_admin_and_support_semantic_boundaries.py  test_avito_parser_adapter_boundaries.py  test_egress_routing_boundaries.py  test_entitlements_and_billing_boundaries.py  test_filter_catalog_semantic_boundaries.py  test_identity_and_access_boundaries.py  test_import_boundaries.py  test_max_adapter_semantic_boundaries.py  test_notification_delivery_boundaries.py  test_public_contract_primitives.py  test_subscription_lifecycle_boundaries.py  test_telegram_adapter_callback_validation_boundaries.py  test_telegram_adapter_chat_surface_boundaries.py  test_telegram_adapter_deep_link_validation_boundaries.py  test_telegram_adapter_display_projection_boundaries.py  test_telegram_adapter_existing_bot_operational_gate_boundaries.py  test_telegram_adapter_import_boundaries.py  test_telegram_adapter_intent_normalization_boundaries.py  test_telegram_adapter_mini_app_validation_boundaries.py  test_telegram_adapter_outbound_mapping_boundaries.py  test_telegram_adapter_provider_mode_boundaries.py  test_telegram_adapter_provider_outcome_boundaries.py  test_telegram_adapter_runtime_gate_boundaries.py  test_telegram_adapter_security_privacy_boundaries.py  test_telegram_adapter_update_intake_boundaries.py  test_usage_consumption_boundaries.py  test_web_cabinet_semantic_boundaries.py
tests/contract/: test_admin_and_support_semantic_contract_exports.py  test_avito_parser_adapter_contracts.py  test_beacon_management_bm09_history_contracts.py  test_beacon_management_contracts.py  test_egress_routing_assignment_contracts.py  test_egress_routing_browser_windows_fallback_gate_contracts.py  test_egress_routing_contracts.py  test_egress_routing_development_bridge_gate_contracts.py  test_egress_routing_dispatch_contracts.py  test_egress_routing_fallback_contracts.py  test_egress_routing_lease_contracts.py  test_egress_routing_outcome_availability_contracts.py  test_egress_routing_outcome_contracts.py  test_egress_routing_outcome_fallback_contracts.py  test_egress_routing_outcome_response_contracts.py  test_egress_routing_outcome_response_failure_contracts.py  test_egress_routing_persistence_runtime_gate_contracts.py  test_egress_routing_proof_only_gate_contracts.py  test_egress_routing_reconciliation_contracts.py  test_egress_routing_reconciliation_resolution_contracts.py  test_egress_routing_registration_contracts.py  test_egress_routing_replay_contracts.py  test_egress_routing_restriction_evaluation_contracts.py  test_egress_routing_restriction_signal_contracts.py  test_egress_routing_safe_diagnostic_gate_contracts.py  test_egress_routing_selection_contracts.py  test_egress_routing_session_secret_gate_contracts.py  test_entitlements_and_billing_imports.py  test_filter_catalog_semantic_contract_exports.py  test_identity_and_access_imports.py  test_imports.py  test_max_adapter_semantic_contract_exports.py  test_notification_delivery_attempt_contracts.py  test_notification_delivery_batch_contracts.py  test_notification_delivery_deduplication_contracts.py  test_notification_delivery_deferred_runtime_gate_contracts.py  test_notification_delivery_eligibility_contracts.py  test_notification_delivery_external_recovery_contracts.py  test_notification_delivery_listing_card_contracts.py  test_notification_delivery_no_new_status_contracts.py  (+21 more)
tests/fixtures/: admin_and_support_semantic_vectors.json  filter_catalog_semantic_vectors.json  max_adapter_semantic_vectors.json  web_cabinet_semantic_vectors.json
tests/unit/: test_admin_and_support_semantic_contracts.py  test_admin_tariff_management_semantics.py  test_audit_correlation_primitives.py  test_avito_parser_adapter_semantics.py  test_beacon_integration_semantics.py  test_beacon_management_bm09_history_semantics.py  test_beacon_management_fixtures.py  test_common_contract_primitives.py  test_configuration_primitives.py  test_egress_routing_assignment_semantics.py  test_egress_routing_dispatch_semantics.py  (+55 more)
(+211 files in other folders)
